Fri Jul 23 14:26:53 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_LocalityManager.idl:

          Added local interface for configuration plugins.

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Added logic to invoke configuration plugins if present.

        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.h:
        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.cpp:

          Loading logic for configuration plugins.

        * DAnCE/LocalityManager/Configuration:
        * DAnCE/LocalityManager/Configuration/Configuration.mpc:
        * DAnCE/LocalityManager/Configuration/Process_Name.h:
        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:
        * DAnCE/LocalityManager/Configuration/Process_Name_export.h:

          Change process name configuration plugin.  Note that this only
          works on Linux (kernel 2.6.9) and later.  If invoked on other
          platforms, it will generate a StartError exception.

Fri Jul 23 14:24:21 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Interceptors/Error_Interceptors.mpc:

          dynamicflags should use +=

Fri Jul 23 14:21:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:

          Added some documentation, removed a couple extraneous properties.

        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:

          Update to accomodate the changes in DAnCE_Properties.idl.

Fri Jul 23 13:55:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/Base/Latency_Base.idl:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Base/VTopic_Base.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Base/VTopics_Base.idl:
          Replace an anonymous bounded octet sequence with a typedef.

Fri Jul 23 13:56:23 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
